--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "2.1.0",
   "homepage": "https://github.com/designbyjake/sassline",
   "authors": [
-    "Jake Giltsoff <contact@designbyjake.co.uk> (http://jke.me)"
+    "Jake Giltsoff <hi@jke.me> (http://jke.me)"
   ],
   "description": "Set text on the web to a baseline grid with Sass & rems using a responsive modular-scale.",
   "keywords": [
