--- a/package.json
+++ b/package.json
@@ -17,7 +17,14 @@
   "scripts": {
     "start": "gulp"
   },
-  "keywords": [ "sass", "baseline", "boilerplate", "modular-scale" ],
+  "keywords": [ "sass", "eyeglass-module", "baseline", "boilerplate", "modular-scale" ],
   "author": "Jake Giltsoff <hi@jke.me> (http://jke.me)",
-  "license" : "MIT"
+  "license" : "MIT",
+  "files": [
+    "sass"
+  ],
+  "main": "eyeglass-exports.js",
+  "dependencies": {
+    "eyeglass": "*"
+  }
 }
