--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "gulp": "^3.9.0",
     "gulp-sass": "^2.1.1",
     "gulp-autoprefixer": "^3.1.0",
-    "gulp-minify-css": "^1.2.2",
+    "gulp-clean-css": "^2.0.2",
     "gulp-rename": "^1.2.2",
     "gulp-webserver": "^0.9.1"
   },
